1999-02-28  Roland McGrath  <roland@baalperazim.frob.com>

	* main.c (S_startup_dosync): Use ports_class_iterate.
	(sigterm_handler): Likewise.

Tue Feb 16 05:50:27 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* io-ops.c (S_io_revoke): New function.  Don't attempt to
	implement.  (Other systems don't even permit non-file revokes.)

1998-10-24  Roland McGrath  <roland@baalperazim.frob.com>

	* ethernet.c (ethernet_open): Check error return from device_open and
	device_set_filter.
	(setup_ethernet_device): Check error return from device_get_status.

	* ethernet.c (ethername): Remove static variable.
	(setup_ethernet_device): Don't set it.
	(ethernet_open): Don't use it; use DEV->name instead.

1998-09-04  Roland McGrath  <roland@baalperazim.frob.com>

	* loopback.c (loopback_type_trans): Return u_int16_t.

Fri Apr 24 15:43:07 1998  Thomas Bushnell, n/BSG  <tb@mit.edu>

	* io-ops.c (S_io_select): When returning EINTR after cancellation,
	deallocate REPLY because the stub won't do it for us.  Reported by
	UCHIYAMA Yasushi (uch@nop.or.jp).

1997-08-25  Miles Bader  <miles@gnu.ai.mit.edu>

	* io-ops.c (S_io_write): Negate linux error codes before returning.

1997-08-19  Miles Bader  <miles@gnu.ai.mit.edu>

	* linux-inet/tcp.c (tcp_conn_request): SK->err holds errno values,
	not linux negative errno return vals.

Wed Aug 20 14:05:52 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* main.c (main): New args for
	ports_manage_port_operations_multithread.

Fri Aug  8 11:47:08 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* linux-inet/tcp.c (tcp_check): Move to end of file so it isn't
	inlined and can be profiled easily.
	* linux-inet/udp.c (udp_check): Likewise.

Mon Jul 21 14:58:13 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): Add iohelp.

	* main.c (trivfs_goaway): If FSYS_GOAWAY_FORCE is set, then go
	away, otherwise, continue to return EBUSY.

Fri Apr 25 10:46:49 1997  Miles Bader  <miles@gnu.ai.mit.edu>
